# sstamharique

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
bible/: README.md  scrape.py
bible/assets/: home.html
bible/urls/: mp3s.csv  mp3s2.csv  pages.csv  report.csv  sub.csv
mms/: adapt_mms_amh.ipynb  adapt_mms_amh.py  dataset.py  eval.py
notebooks/: adapt_mms_amh.py
reports/: stt-test-custom.json  stt-test-stock.json
stt_amh/: __init__.py  config.py  dataset.py  features.py  plots.py  run_asr.py
stt_amh/modeling/: predict.py  train.py
