[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stt_amh"
version = "0.0.1"
description = "An STT school project for Amharic"
authors = [
  { name = "INALCO" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.12.0"


[tool.ruff]
line-length = 122
src = ["stt_amh"]
include = ["pyproject.toml", "stt_amh/**/*.py"]

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I"]
extend-ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["stt_amh"]
force-sort-within-sections = true

[tool.ruff.format]
indent-style = "tab"
